feat: Add navigation and agriturismo details
Introduces navigation links to the header, including a "Home" link. Enhances the hero section with an improved "Foggia, Puglia" subtitle and a direct link to "Le Nostre Camere". Updates the agriturismo section with new content about the establishment's history and modern hospitality, along with new icons.

--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 </head>
   <body class="bg-[#f9f7f2]">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
